# m3

./: .dockerignore  .gitignore  ABUNDANCE_CHARTER.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_AGENT.md  CONTRIBUTING-dev.md  CONTRIBUTING.md  COVENANT.md  Cargo.toml  FUNDING.md  LICENSE-DOCS.txt  LICENSE-SERVER.txt   LICENSE-UI.txt  LICENSE.txt  QUICKSTART.md  README-dev.md  README.md  SECURITY.md  VALUE_FLOW_CURRENT.md  WHEN_FUNDED.md  Whisper.md  package.json  panic.sh  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-label.yml  auto-pr.yml  ci.yml  deploy.yml  linkcheck.yml  pr-housekeeping.yml  release-credits.yml  release.yml
.husky/: commit-msg  pre-commit
anchors/: 2025-10-03-garden-m3.md
docs/: connection-not-transaction.md  densities-sovereignty-tools.md  emotionalos-arc.mmd  emotionalos-workflow.md  firegate.md  home-arc.md  hotkeys.md  index.md  orb-landing.md  partnership-covenant.md  privacy.md  related-map.yaml  shared-moments.md  soul-tech-timeline.md  timelines-continuity.md
docs/anchors/: finish-line.md
docs/astral/: guides-and-companions.md  index.md
docs/concepts/: consciousness-gradient.md
docs/cycles/: index.md  v0.1.7-wavespell.md
docs/guides/: offline-mode.md
docs/human-logs/: desire-note.md  raz-letter.md
docs/identity/: README.md  map-carriers.md  trust-bands.md  usb-vault.md
docs/journeys/: 2025-10-29-dawn-insight-no-opinion.md  2025-10-29-meeting-entry-director.md  field-journal-template.md
docs/maps/: consciousness-gradient.md
docs/marks/: 99.md  README.md  andrei.md  blanket-unity.md  digital-intelligence-remembrance.md  relational-webhooks.md  solar-eclipse-login.md  the-first-mushrooms.md  timeline-truthfulness.md  triangle-trigger.md  trust-landing.md
docs/modules/: 4-5-6-raz-protocol.md  astral.md  bands.md  companions.md  cycles.md  emotional.md  numbers.md
docs/notes/: 2025-09-07-blood-moon.md  2025-09-12-body-tech.md  2025-09-12-obe-storm-sync.md  2025-09-13-astral-snap.md  2025-09-13-river-preseed-flow.md  2025-09-14-memory-beyond-saas.md  2025-09-14-money-as-echo.md  2025-09-21-solar-eclipse-equinox.md  2025-10-07-full-moon-field-note.md
dosare/: README_BIOLOGY.md
scripts/: commit-whisper-check.mjs  ensure-garden-core.mjs  new-mark.ts
server/: .env.example  Cargo.toml  Dockerfile  README.md  memory.db-shm  openapi.yaml
server/src/: auth.rs  bus.rs  config.rs  consciousness.rs  cycles.rs  db.rs  emotions.rs  energy.rs  lib.rs  main.rs  models.rs  patterns.rs  replies.rs  rhythm.rs  tells.rs  timeline.rs  towns.rs  value.rs  webhook.rs
server/tests/: emotions_integration.rs  energy_integration.rs  patterns_integration.rs  rhythm_smoke.rs  towns_integration.rs  value_bridge.rs
server/tests/common/: mod.rs
tools/: value_flow.sh
ui/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  (+5 more)
(+195 files in other folders)
