[package]
name = "m3-memory-server"
version = "0.1.8"
edition = "2021"

[features]
# Fast-by-default. Enable `ephemeris` to swap in precise astronomy for /cycles.
# When enabled, the server will use a heavier, more accurate solver behind the
# `compute` facade in server/src/cycles.rs.
#
# To enable locally:
#   cargo run -p m3-memory-server --features ephemeris
# To test:
#   cargo test -p m3-memory-server --features ephemeris
ephemeris = ["dep:solunatus"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"
tokio-rusqlite = "0.5"
anyhow = "1"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
tokio-stream = "0.1"
dotenvy = "0.15"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
tower = "0.5"
once_cell = "1.21.3"
solunatus = { version = "0.3.2", default-features = false, features = ["cpu-portable"], optional = true }

# --- Optional (for `ephemeris` feature): suggested crates to consider
# astro-rust = { version = "0.1", optional = true }      # example placeholder; evaluate real crate later
# vsop87 = { version = "2", optional = true }            # planetary positions (if needed)
# moon-phase = { version = "0.3", optional = true }       # if we choose a maintained lunar phase crate
# elp2000 = { version = "0.1", optional = true }          # precise lunar theory (evaluate)

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
